# gdar

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  debug.ipynb  demo.ipynb  pyproject.toml
demo_files/: node_positions.pkl
docs/source/: conf.py  gdar.rst  getting_started.rst  index.rst  modules.rst  usage.rst
gdar/: flow.py  gdar_model.py  graph.py  visualization.py
