[project]
name = "gdar"
version = "0.1.1"
description = "Implementation of Graph Diffusion Autoregressive (GDAR) model"
authors = [
    { name="Felix Schwock", email="fschwock@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
