[project]
name = "gdar"
version = "0.1.2"
description = "Implementation of Graph Diffusion Autoregressive (GDAR) model"
authors = [
    { name="Felix Schwock", email="fschwock@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.22",
    "matplotlib>=3.7",
    # add others you import at import-time, e.g.:
    "scipy>=1.8",
    "networkx>=2.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
